adjusts overflow issues

--- a/src/css/contact.module.css
+++ b/src/css/contact.module.css
@@ -3,18 +3,16 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: auto;
-  min-height: 100vh;
+top: 0px;
+
 }
 .contact-container {
   background-color: var(--container);
   width: 300px;
-  height: 200px;
-  margin: 20px auto;
   max-width: 90%;
-  padding: 20px;
   border-radius: 10%;
   box-shadow: var(--shadow);
+  top: 0;
 }
 .icon {
   display: flex;
@@ -45,11 +43,7 @@
   #contact h2 {
     margin: 0px;
   }
-  #contact .container {
-    height: auto;
-    min-height: 100vh;
-    width: var(--width);
-  }
+
 
   .contact-container {
     width: 200px;
